@@ -1,4 +1,0 @@
-BlackBook is a simple address book written using the GTK+ toolkit.
-It should run on any system where the GTK+ toolkit works. It is
-distributed under the terms of the GNU General Public License,
-version 2 or later.
