@@ -1,4 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2004/03/08 19:40:40 jmmv Exp $
-bin/blackbook
-share/icons/book64.xpm
-share/icons/book48.xpm
