@@ -1,4 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2002/12/02 21:18:44 jmmv Exp $
-
-SHA1 (blackbook-3.tar.gz) = a9266dd9e89cc97a05aa763f6370b14fd0dbdbc4
-Size (blackbook-3.tar.gz) = 74665 bytes
